# labs

./: .gitignore
1_semester/0/: 0.c  report.docx
1_semester/1/: 1.c  1.h  2.c  report.docx
1_semester/10/: 1.c  1.h  report.docx
1_semester/2/: 1.c  2.c  2_1.c  2_2.c  numberOfTaylor.c  report.docx
1_semester/3/: 1.c  2.c  report.docx
1_semester/4/: 1.c  1_build_and_run.sh  2.c  2_build_and_run.sh  populate_bin_file.c  report.docx
1_semester/5/: 1.c  report.docx
1_semester/6/: 1_1.c  1_2.c  1_3.c  report.docx
1_semester/7/: 1.c  2.c  3.c  report.docx
1_semester/8/: 1.c  createInput.c  report.docx
1_semester/9/: 1.c  report.docx
1_term/programming_basics(OП)/: .gitignore  exam.c
2_term/OOP/: .gitignore  polynom.cpp  report_1-4.docx  report_1-4.pages
2_term/OOP/10/src/: CMakeLists.txt  array.cpp  widget.cpp  widget.h
2_term/OOP/4/: .gitignore  CMakeLists.txt  direction.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  restart.sh  snake_controller.cpp  snake_controller.h  tiles.cpp  tiles.h
2_term/OOP/5/src/: CMakeLists.txt  output.puml  triangle.cpp  triangle.h  triangleangles.h  trianglesides.h  widget.cpp  widget.h
2_term/OOP/7/src/: CMakeLists.txt  customdeque.cpp  customdeque.h  deque.cpp  deque.h  main.cpp  matrix.cpp  matrix.h  node.h  uimatrix.cpp  uimatrix.h  widget.cpp  widget.h
2_term/numerical_analysis(ЧМ)/: 1.py  pyproject.toml  run_lab.sh
2_term/numerical_analysis(ЧМ)/l1/: l1.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l10/: l10.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l2/: l2.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l3/: l3.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l4/: l4.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l5/: l5.py  report.pages
2_term/numerical_analysis(ЧМ)/l6/: l6.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l7/: l7.py  report.pages
2_term/numerical_analysis(ЧМ)/l8/: l8.py  report.docx  report.pages
2_term/numerical_analysis(ЧМ)/l9/: l9.py  report.docx  report.pages
2_term/physics/: Ясногородський_пз11_КСР_2.pages
3_term/algorithms/: pyproject.toml  run_sortings.sh
3_term/algorithms/lab10/: main.py  report.pages
3_term/algorithms/lab11/: kmp_search.py  main.py  report.pages
3_term/algorithms/lab12/: boyer_moore.py  main.py  report.pages
3_term/algorithms/lab8/: lab8.pages  main.py  priority_queue_list.py
3_term/algorithms/lab9/: main.py  rb_tree.py  report.pages
3_term/algorithms/reports/: lab4.pages
3_term/algorithms/sorting/: array_generators.py  bubble_sort.py  config.py  count_sort.py  heap_sort.py  insertion_sort.py  main.py  main_2.py  merge_sort.py  quick_sort.py  run_benchmark.sh  selection_sort.py  shell_sort.py  utils.py
3_term/algorithms/sorting/reports/: lab1.pages  lab2.pages  lab3.pages  lab5.pages  lab6.pages  lab7_sortings_comparison.pages
3_term/english/: homework.pages
3_term/operating_systems/9/: .gitignore  constants.py  pyproject.toml  report.pages  run-client.sh  run-server.sh
3_term/operating_systems/9/client/: main.py  socket_client.py
3_term/operating_systems/9/client/views/: create_post.py  login.py  view_posts.py
3_term/operating_systems/9/forum/client/: main.py  socket_client.py
3_term/operating_systems/9/forum/client/views/: view_posts.py
3_term/operating_systems/9/forum/leader_server/handlers/: create_post.py  view_posts.py
3_term/operating_systems/9/forum/leader_server/models/: post.py  user.py
3_term/operating_systems/9/forum/leader_server/utils/: auth_middleware.py  check_for_bad_word.py
3_term/operating_systems/9/leader_server/: global_vars.py  main.py
3_term/operating_systems/9/leader_server/handlers/: create_post.py  login.py  view_posts.py
3_term/operating_systems/9/leader_server/models/: bad_word.py  post.py  user.py
3_term/operating_systems/9/leader_server/utils/: auth_middleware.py  check_for_bad_word.py  password.py  random_string.py
4_term/Іноземна_мова/: 1.docx  1.pages  10.1.docx  10.2.docx  10.2.pages  11.1.docx  11.2.docx  11.2.pages  12.1.docx  12.2.docx  12.2.pages  13.1.docx  13.2.docx  14.1.docx  14.2.docx  14.2.pages  15.1.docx  15.1.pages  15.2.docx  16.docx  16.pages  17.docx  18.docx  18.pages  2.docx  2.pages  3.docx  3.pages  4.docx  4.pages  5-1.docx  5-1.pages  5-2.docx  5-2.pages  6-1.docx  6-1.pages  6-2.docx  6-2.pages  7.2.docx  7.2.pages  (+14 more)
4_term/Академічні_студії/: 1_Моя_Академія.pptx  2_Самопрезентація.docx  ЗМІСТ ТВОРЧІ ЗАВДАННЯ ДО МОДУЛІВ 1_2.docx  КОНТРОЛЬНІ ПИТАННЯ (1).docx  Контрольна робота.docx  Підсумковий тестовий контроль.docx  ТВОРЧЕ ЗАВДАННЯ 2 (ДО МОДУЛЮ 1).docx  ТВОРЧЕ ЗАВДАННЯ ДО МОДУЛЮ 1.docx  ТВОРЧЕ ЗАВДАННЯ ДО МОДУЛЮ 2.docx  Творче завдання 4.docx  питання 1.docx
4_term/Безпека_життєдіяльності/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  БЖД ТЕСТИ Тест 1, тест2 тест 3.docx  Зміст контрольних з безпеки життєдіяльності.docx
4_term/Етика_та_естетика/: 1.docx  1.pages  2.docx  2.pages  3.docx  3.pages  4.docx  4.pages  5.docx  5.pages  6.docx  6.pages  7.docx  7.pages  8.docx  8.pages  Есе_Естетика.docx  Есе_Етика.docx  Естетика_ППЗ.docx  Етика_ППЗ.docx
4_term/Логіка/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx  Підсумковий_тест.docx
4_term/Основи_академічного_письма/: 0,ЗМІСТ Основи академічного письма (МАУП).cleaned.docx  1.docx  2.docx  3_практичне.docx  3_практичне.pages  3_тест.docx  3_тест.pages  4.docx  5.docx  6.docx  6.pages
4_term/Основи_психології_та_педагогіки/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx  9.docx  Зміст.docx  підсумковий тест.docx
4_term/Правознавство/: Верховна_Рада_України_єдиний_орган_законодавчої_влади_в_Україні.docx  Реферат (1).docx  (+18 more)
5_term/Компʼютерна_графіка/: convert_adoc_to_pdf.sh  pyproject.toml
5_term/Компʼютерна_графіка/1/: README.adoc  main.py
5_term/Компʼютерна_графіка/2/: README.adoc
5_term/Компʼютерна_графіка/3/: README.adoc
5_term/Компʼютерна_графіка/4/: README.adoc  main.py
5_term/Компʼютерна_графіка/5/: README.adoc  main.py
5_term/Компʼютерна_графіка/6/: README.adoc  main.py
(+461 files in other folders)
