[tool.poetry]
name = "numerical_analysis"
version = "0.1.0"
description = ""
authors = ["Nikita Yasnogorodskyi <nikita@orca.security>"]

[tool.poetry.dependencies]
python = "~3.10"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
