[tool.poetry]
name = "forum"
version = "0.1.0"
description = ""
authors = ["Nick Yasnogorodskyi <nikyasnogorodskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyTermGUI = "^7.3.0"
pyyaml = "^6.0"
bcrypt = "^4.0.1"
sqlalchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
